--- a/AUTHORS
+++ b/AUTHORS
@@ -3,3 +3,8 @@ Kaylee is written and maintained by Zaur Nasibov.
 Development Lead
 ````````````````
 - Zaur Nasibov <zaur@znasibov.info>
+
+Authors of the third-party code used in the project (see NOTICE for details)
+````````````````````````````````````````````````````````````````````````````
+- Armin Ronacher
+- 10gen, Inc.
