--- a/AUTHORS
+++ b/AUTHORS
@@ -1,12 +1,7 @@
 Kaylee is written and maintained by Zaur Nasibov.
+Kaylee code has adopted some ideas from 3d-party products (see NOTICE).
 
 Development Lead
 ****************
 
 - Zaur Nasibov <zaur@znasibov.info>
-
-Authors of the third-party code used in the project
-***************************************************
-
-- Armin Ronacher
-- 10gen, Inc.
