Preparing to distribute Kaylee.

--- a/AUTHORS
+++ b/AUTHORS
@@ -2,6 +2,6 @@ Kaylee is written and maintained by Zaur Nasibov.
 Kaylee code has adopted some ideas from 3d-party products (see NOTICE).
 
 Development Lead
-****************
+================
 
-- Zaur Nasibov <zaur@znasibov.info>
+* Zaur Nasibov <zaur@znasibov.info>
