Added default communication API docs and made client API refactoring.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,7 +1,10 @@
+Authors
+=======
+
 Kaylee is written and maintained by Zaur Nasibov.
 Kaylee code has adopted some ideas from 3d-party products (see NOTICE).
 
-Development Lead
-================
+People
+------
 
 * Zaur Nasibov <zaur@znasibov.info>
