--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,16 +1,19 @@
 Changelog
 =========
 
-v0.3 (15.05.13)
+
+v0.3 (2013.06.15)
+-----------------
 * New Kaylee environment and project management scripts.
 * New built-in debug server.
 * New native Werkzeug framework support.
-* Demo projects are now in a separate repository.
+* New demo projects repository.
 * Updated unit tests.
+* Massive code improvements.
 
-v0.2  (23.12.12)
+
+v0.2  (2012.12.23)
 ----------------
-
 * New Sessions Data Managers API and implementation.
 * New "Human OCR" demo project (demonstrates Sessions API).
 * New localbuild script to build demo applications from repository code.
