--- a/TODO
+++ b/TODO
@@ -1,39 +1,37 @@
 v0.4
 ----
+* Migrate to Python 3
 * Communication through document.cookie: make sure that only 1 instance of
   Kaylee is running in a single browser.
-* Random data seed per application
+* Random data seed per application (e.g in Project settings)
 * Google App Engine support
 * Tornado support
 * Kaylee Core management API
 * Аdd the Travelling salesman problem as a demo app.
 * Add a method to a project which returns a 0.0..1 completed value
+* Node extensions (e.g. user management and rankings)
 
 Feature requests
 ----------------
 
-* Start thinking of Py3 support
 * Test with PyPI
 * Rebrand: distributed computing -> crowd computing
 * Client: sleepy loops and special benchmark. Also, benchmark score support on
   server.
 * Client: operations timeout (e.g. project import timeout)
-* User management and rankings
-
 
 Refactoring requests
 --------------------
-* NodeID consructor
-* NodeID from_object (do we need it?)
 
 Also
 ----
 * PDB support in Emacs
 * Pylint support in Emacs
 
-Interesting links:
-# http://www.andromedaproject.org/#!/home
-# http://lenta.ru/news/2012/12/10/helpandromeda/
+Interesting links
+-----------------
+* http://www.andromedaproject.org/#!/home
+* http://lenta.ru/news/2012/12/10/helpandromeda/
 
 
 
