--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 v0.4
 ----
 * Migrate to Python 3
+* Move errors from error.py to appropriate *.py files
 * Communication through document.cookie: make sure that only 1 instance of
   Kaylee is running in a single browser.
 * Random data seed per application (e.g in Project settings)
